third_party/WebKit/Source/bindings/core/v8/ScriptValueSerializer.h
@@ -142,7 +142,7 @@ protected:
     void writeArrayBufferView(const DOMArrayBufferView&);
     void doWriteImageData(uint32_t width, uint32_t height, const uint8_t* pixelData, uint32_t pixelDataLength);
     void writeImageData(uint32_t width, uint32_t height, const uint8_t* pixelData, uint32_t pixelDataLength);
-    void writeImageBitmap(uint32_t width, uint32_t height, uint32_t isOriginClean, const uint8_t* pixelData, uint32_t pixelDataLength);
+    void writeImageBitmap(uint32_t width, uint32_t height, uint32_t isOriginClean, uint32_t isPremultiplied, const uint8_t* pixelData, uint32_t pixelDataLength);
     void writeRegExp(v8::Local<v8::String> pattern, v8::RegExp::Flags);
     void writeTransferredMessagePort(uint32_t index);
     void writeTransferredArrayBuffer(uint32_t index);
@@ -509,7 +509,7 @@ private:
     bool readDate(v8::Local<v8::Value>*);
     bool readNumber(v8::Local<v8::Value>*);
     bool readNumberObject(v8::Local<v8::Value>*);
-    ImageData* doReadImageData();
+    bool doReadImageDataProperties(uint32_t* width, uint32_t* height, uint32_t* pixelDataLength);
     bool readImageData(v8::Local<v8::Value>*);
     bool readImageBitmap(v8::Local<v8::Value>*);
     bool readCompositorProxy(v8::Local<v8::Value>*);
